# BeatCLI

./: Cargo.toml  ICON_README.md  README.md  THREAD_MANAGEMENT.md  build.rs
src/: command.rs  lyrics.rs  main.rs  player.rs  playlist.rs  ui.rs
